Fix the transparency on the "Go" button in the jump box for IE.

--- a/PfamWeb/root/static/css/pfam_all_ie.css
+++ b/PfamWeb/root/static/css/pfam_all_ie.css
@@ -5,7 +5,7 @@
    stylesheet to apply various fixes for IE wrinkles. This should be those styles
    which are applicable to all versions of IE
    
-   $Id: pfam_all_ie.css,v 1.1 2006-11-07 16:45:29 jt6 Exp $
+   $Id: pfam_all_ie.css,v 1.2 2007-01-15 15:31:23 jt6 Exp $
 */
 
 /* make the drop-down menus semi-transparent */
@@ -16,4 +16,10 @@ div.menuContent {
 /* a little transparency for the tooltips */
 .tt {
 	filter: alpha(opacity=80);
+}
+
+/* fix the transparency on the "Go" button for the jump box */
+#goButton {
+    background-image: none;
+    filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src="http://deskpro16081.dynamic.sanger.ac.uk:8000/catalyst/PfamWeb/images/go.png",sizingMethod="crop");
 }
